fix z-index of navigation menu

--- a/assets/sass/layouts/_sidebar.scss
+++ b/assets/sass/layouts/_sidebar.scss
@@ -260,6 +260,7 @@ body {
     // >>>>>>>>>>>>>>>>>>>>>>>
     &.is-left {
         width: 21%;
+        padding: 0;
     }
 
     &.is-right {
