--- a/assets/sass/pages/_product.scss
+++ b/assets/sass/pages/_product.scss
@@ -61,7 +61,7 @@
     }
 }
 
-.product,
+.product-container,
 .col2-left-layout {
     // SPECIFIC VARIABLES(USE ONLY IN COMPONENT)
     // >>>>>>>>>>>>>>>>>>>>>>>
